--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,12 @@
     <string name="settings">Settings</string>
     <string name="sign_in">Sign In</string>
     <string name="register">Register</string>
-    <string name="email">Email</string>
-    <string name="password">Password</string>
-    <string name="name">Name</string>
+    <string name="hint_email">Email</string>
+    <string name="hint_password">Password</string>
+    <string name="hint_name">Name</string>
+    <string name="hint_location">Location</string>
+    <string name="hint_year_of_birth">Year of Birth</string>
+    <string name="hint_bio">Bio</string>
+    <string name="dont_have_an_account">Don\'t have an Account?</string>
+    <string name="already_registered">Already Registered?</string>
 </resources>
