--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="settings">Settings</string>
     <string name="sign_in">Sign In</string>
     <string name="register">Register</string>
+    <string name="continue_one">Continue</string>
+    <string name="continue_two">Finish</string>
     <string name="hint_email">Email</string>
     <string name="hint_password">Password</string>
     <string name="hint_name">Name</string>
@@ -14,4 +16,5 @@
     <string name="hint_bio">Bio</string>
     <string name="dont_have_an_account">Don\'t have an Account?</string>
     <string name="already_registered">Already Registered?</string>
+    <string name="one_last_step">Almost Done, Just One Last Step</string>
 </resources>
