--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="dont_have_an_account">Don\'t have an Account?</string>
     <string name="already_registered">Already Registered?</string>
     <string name="one_last_step">Almost Done, Just One Last Step</string>
+    <string name="search_by_name">Search By Name</string>
 </resources>
